--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "nodemon": "^3.1.10",
     "pug": "^3.0.3"
   }
 }
