--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "nodemon": "^3.1.10",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "uuid": "^11.1.0"
   }
 }
