--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "contributors": [],
   "scripts": {
-    "dev": "",
+    "dev": "nodemon app.js --ignore *.json",
     "test": ""
   },
   "dependencies": {
@@ -31,5 +31,8 @@
     "nodemon": "^3.1.10",
     "pug": "^3.0.3",
     "uuid": "^11.1.0"
+  },
+  "nodemonConfig": {
+    "ignore": ["FILES/*"]
   }
 }
